prometheus/07-domain/02-domain-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-svc
  namespace: kube-prom
spec:
  selector:
    app: domain
  ports:
  - name: http
    port: 9222
    targetPort: 9222
