prometheus/07-domain/03-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-ingress
  namespace: kube-prom
spec:
  ingressClassName: "nginx"
  rules:
  - host: "k8s-domain.oldxu.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: domain-svc
            port:
              number: 9222
